<resources>
    <string name="app_name">Corporación Corrales</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="navigationview_clientes_productos">Clientes / Productos</string>
    <string name="navigationview_historial">Historial</string>
    <string name="navigationview_cerrar_sesion">Cerrar Sesión</string>

    <string name="action_settings">Settings</string>
    <string name="category_clients">Clientes</string>
    <string name="accept">Aceptar</string>

    <string name="drawer_layout_title">Corporación Corrales</string>
    <string name="drawer_layout_subtitle">Cotizaciones App</string>

    <string name="refrescar">REFRESCAR</string>

    <string name="dias_de_validez_label">Dias de validez: </string>

    //Messages
    <string name="msg_enter_user_and_password">Por favor ingrese usuario y clave.</string>
    <string name="temp_password">123</string>
    <string name="msg_user_or_pass_incorrect">Usuario y/o clave incorrecto(s).</string>
    <string name="no_se_encontraron_docs">No se encontraron documentos para este usuario</string>
    <string name="error_android_id">Error al obtener id único del dispositivo.</string>
    <string name="saldo_total">Saldo total:</string>
    <string name="saldo_disponible">Saldo disponible:</string>
    <string name="saldo_disponible_suficiente">Saldo disponible suficiente</string>
    <string name="saldo_disponible_insuficiente">Saldo disponible insuficiente</string>
    <string name="send_document_by_email">ENVIAR DOCUMENTO POR CORREO ELECTRONICO</string>
    <string name="device_not_allowed_message">Lo sentimos, Ud. no tiene permiso para usar CorralesApp. Hasta luego.</string>
    <string name="not_connection_message">Por favor revise su conexión a internet.</string>
    <string name="ir_a_articulos">Ir a artículos disponibles para</string>
    <string name="msg_invalid_email">Por favor ingrese correo electrónico válido</string>
    <string name="msg_cambio_rubro">Recuerde que al seleccionar un nuevo rubro, perderá su orden actual.</string>

    //dialog Precio
    <string name="precio_dentro_del_rango">Precio dentro del rango permitido.</string>
    <string name="precio_fuera_del_rango">Precio por debajo del limite permitido.</string>
    <string name="precio_ingresado_vacio">Por favor ingrese el precio.</string>
    //dialog Cantidad
    <string name="cantidad_solicitada_permitida">Cantidad solicitida permitida.</string>
    <string name="cantidad_solicitada_no_permitida">Cantidad no disponible.</string>
    <string name="cantidad_solicitada_mayor_a_cero">Por favor ingrese una cantidad mayor a cero.</string>
    <string name="cantidad_solicitada_vacia">Por favor ingrese una cantidad.</string>
    //dialog Seleccionar Cliente
    <string name="select_client_tittle">SELECCIONE CLIENTE</string>
    //dialog Unidad de Venta
    <string name="unidad_venta_tittle">UNIDAD DE VENTA</string>
    <string name="unidad_venta_codigo">Código</string>
    <string name="unidad_venta_presentacion">Presentación</string>
    <string name="unidad_venta_stock">Stock</string>
    //dialog maximo de dias
    <string name="nro_dias_maximo">El máximo de días permitidos para este cliente es</string>
    <string name="nro_dias_dentro_del_rango">Número de días permitido.</string>
    <string name="nro_dias_fuera_del_rango">Número de días no permitido</string>
    <string name="nro_dias_ingresado_vacio">Por favor ingrese el número de días.</string>
    //dialog stock virtual
    <string name="sin_stock_virtual">No se encontro stock virtual para este producto</string>
    //dialog Seleccion de Almacen
    <string name="warehouse_selection_tittle">SELECCION DE ALMACEN</string>
    <string name="warehouse_tittle">Almacén</string>
    <string name="warehouse_code_header">Código</string>
    <string name="warehouse_stock_header">Stock</string>
    //dialog seleccionar rubro
    <string name="select_rubro_tittle">SELECCIONE RUBRO</string>
    //Error en el llamado al server
    <string name="error_on_server">Error en el servidor</string>
    <string name="not_unit_description_message">No se encontró descripción de unidades para el producto con código</string>

    <string-array name="array_rubros">
        <item>Aluminio</item>
        <item>Vidrio</item>
        <item>Accesorio</item>
        <item>Plastico</item>
    </string-array>

    <string-array name="array_orden">
        <item>Nombre</item>
        <item>Importe</item>
        <item>Cantidad</item>
    </string-array>

    <string-array name="array_tipos_doc">
        <item>FACTURA</item>
        <item>PROFORMA</item>
        <item>PREVENTA</item>
        <!--<item>Proforma</item>
        <item>Factura</item>
        <item>Preventa</item>-->
    </string-array>

    <string-array name="array_estados_doc">
        <item>Todos</item>
        <item>Aceptados</item>
        <item>Pendientes</item>
        <item>Rechazados</item>
    </string-array>

    <string-array name="array_rubros_historial">
        <item>Todos</item>
        <item>Vidrio</item>
        <item>Aluminio</item>
        <item>Accesorio</item>
        <item>Plastico</item>
    </string-array>


</resources>
