<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_people_black_36dp"
            android:title="@string/navigationview_clientes_productos"/>
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_description_black_36dp"
            android:title="@string/navigationview_historial" />
        <item
            android:id="@+id/nav_close_session"
            android:icon="@drawable/ic_vpn_key_white_36dp"
            android:title="@string/navigationview_cerrar_sesion" />
        <item
            android:id="@+id/menu_none"
            android:icon="@drawable/ic_vpn_key_white_36dp"
            android:title=""
            android:visible="false"/>
    </group>

    <!--<item android:title="Sesion">
        <menu>
            <item
                android:id="@+id/nav_close_session"
                android:icon="@drawable/ic_vpn_key_white_36dp"
                android:title="Cerrar Sesion" />
        </menu>
    </item>-->

</menu>
