<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="620dp"
    android:layout_height="320dp"
    android:layout_marginBottom="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginLeft="10dp"
    android:layout_marginRight="10dp"
    android:orientation="vertical"
    android:background="@color/gris_claro">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary">
        <ImageView
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/logo_cc"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/tvZoomDialogTitle"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/background_light"
            android:text="@string/warehouse_selection_tittle"
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_centerInParent="true"/>
        <ImageView
            android:id="@+id/ivClose"
            android:src="@drawable/cancel_48"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"/>
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal"
                    android:background="@color/gris_fondo">

                    <RelativeLayout
                        android:layout_width="40dp"
                        android:layout_height="match_parent"/>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey100"/>
                    <RelativeLayout
                        android:layout_width="@dimen/unit_stock_row_width"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvCantidad"
                            android:textColor="@color/negro"
                            android:textSize="@dimen/font_size_row_documents_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warehouse_code_header"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:maxLines="1"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey100"/>
                    <RelativeLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent">
                        <TextView
                            android:textColor="@color/negro"
                            android:textSize="@dimen/font_size_row_documents_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warehouse_tittle"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:maxLines="1"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>
                    <View
                        android:layout_width="1dp"
                        android:layout_height="match_parent"
                        android:background="@color/grey100"/>
                    <RelativeLayout
                        android:layout_width="@dimen/unit_stock_row_width"
                        android:layout_height="match_parent">
                        <TextView
                            android:id="@+id/tvId"
                            android:textColor="@color/negro"
                            android:textSize="@dimen/font_size_row_documents_history"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/warehouse_stock_header"
                            android:paddingLeft="5dp"
                            android:paddingRight="5dp"
                            android:maxLines="1"
                            android:layout_centerInParent="true"/>
                    </RelativeLayout>

                </LinearLayout>

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/rvWarehouses"
                    android:scrollbars="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <View
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:orientation="vertical"
                    android:background="@color/grey300">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginLeft="15dp">

                        <ImageView
                            android:id="@+id/ivTodos"
                            android:src="@drawable/unchecked_checkbox_50"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"/>
                        <TextView
                            android:layout_gravity="center_vertical"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Todos"/>

                    </LinearLayout>

                </LinearLayout>

                <View
                    android:layout_marginTop="0dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_alignParentRight="true">
                        <Button
                            android:id="@+id/btnAccept"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="ACEPTAR"
                            android:layout_alignRight="@+id/btnClose"/>
                        <Button
                            android:id="@+id/btnCancel"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="CANCELAR"
                            android:layout_alignParentRight="true"/>
                    </LinearLayout>
                </RelativeLayout>

            </LinearLayout>

            <ProgressBar
                android:layout_centerInParent="true"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/newProgressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_gravity="center"
                android:indeterminateDrawable="@drawable/circular"
                android:max="100"
                android:progress="20"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
